tests/snapshots/run_wpt_conformance__trtx_gather_float32_3D_tensor_and_2D_indices_options_axis_2.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gather.https.any.js gather float32 3D tensor and 2D indices options.axis=2, trtx
 gather :: gather float32 3D tensor and 2D indices options.axis=2: index 3: actual=-66.05901 expected=-68.9197 ulp=374956 tolerance=4
  inputs: gatherInput: [-66.05901336669922, -68.9197006225586, -77.02045440673828, -26.158037185668945, 89.0337142944336, -45.89653396606445, 43.84803771972656, 48.81806945800781, 51.79948425292969, 41.94132614135742, -1.1303654909133911, -50.42131042480469, 90.2870101928711, 55.62076568603515, 44.92119598388672, 56.828636169433594, 10.829925537109377, -19.693084716796875, -37.696800231933594, 43.11057662963867, 0.9129875898361206, -7.699817180633545, 25.76774024963379, 73.60064697265625]; gatherIndices: [0, 0, 0, 1] (constant)
  expected gatherOutput: [-66.05901, -66.05901, -66.05901, -68.9197, -77.020454, -77.020454, -77.020454, -26.158037, 89.033714, 89.033714 ...] (len=48)
  actual gatherOutput: [-66.05901, -66.05901, -66.05901, -66.05901, -77.020454, -77.020454, -77.020454, -77.020454, 89.033714, 89.033714 ...] (len=48)
  expected gatherOutput full nd:
[-66.05901, -66.05901, -66.05901, -68.9197, -77.020454, -77.020454, -77.020454, -26.158037, 89.033714, 89.033714, ...] (len=48, shape=[3, 4, 2, 2])
  actual gatherOutput full nd:
[-66.05901, -66.05901, -66.05901, -66.05901, -77.020454, -77.020454, -77.020454, -77.020454, 89.033714, 89.033714, ...] (len=48, shape=[3, 4, 2, 2])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherInput: f32[3, 4, 2];
  }

  consts {
    operand_0: i32[2, 2] @bytes([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0]);
  }

  nodes {
    [gatherOutput] = gather(gatherInput, operand_0, axis=2, label="");
  }

  outputs { gatherOutput; }
}
