tests/snapshots/run_wpt_conformance__trtx_gather_float32_4D_tensor_and_2D_indices_explict_options_axis_0.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gather.https.any.js gather float32 4D tensor and 2D indices explict options.axis=0, trtx
 gather :: gather float32 4D tensor and 2D indices explict options.axis=0: index 6: actual=-66.05901 expected=-7.699817 ulp=26065232 tolerance=4
  inputs: gatherInput: [-66.05901336669922, -68.9197006225586, -77.02045440673828, -26.158037185668945, 89.0337142944336, -45.89653396606445, 43.84803771972656, 48.81806945800781, 51.79948425292969, 41.94132614135742, -1.1303654909133911, -50.42131042480469, 90.2870101928711, 55.62076568603515, 44.92119598388672, 56.828636169433594, 10.829925537109377, -19.693084716796875, -37.696800231933594, 43.11057662963867, 0.9129875898361206, -7.699817180633545, 25.76774024963379, 73.60064697265625]; gatherIndices: [0, 0, 7, 4] (constant)
  expected gatherOutput: [-66.05901, -68.9197, -77.020454, -66.05901, -68.9197, -77.020454, -7.699817, 25.76774, 73.60065, 90.28701 ...] (len=12)
  actual gatherOutput: [-66.05901, -68.9197, -77.020454, -66.05901, -68.9197, -77.020454, -66.05901, -68.9197, -77.020454, -66.05901 ...] (len=12)
  expected gatherOutput full nd:
[-66.05901, -68.9197, -77.020454, -66.05901, -68.9197, -77.020454, -7.699817, 25.76774, 73.60065, 90.28701, ...] (len=12, shape=[2, 2, 1, 1, 3])
  actual gatherOutput full nd:
[-66.05901, -68.9197, -77.020454, -66.05901, -68.9197, -77.020454, -66.05901, -68.9197, -77.020454, -66.05901, ...] (len=12, shape=[2, 2, 1, 1, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherInput: f32[8, 1, 1, 3];
  }

  consts {
    operand_0: i32[2, 2] @bytes([0, 0, 0, 0, 0, 0, 0, 0, 7, 0, 0, 0, 4, 0, 0, 0]);
  }

  nodes {
    [gatherOutput] = gather(gatherInput, operand_0, axis=0, label="");
  }

  outputs { gatherOutput; }
}
